# drone-coordination

./: .gitignore  Dockerfile  Dockerfile2  README.md  docker-compose.yml  drone-coordination.sh  mav.parm  mav.tlog  proxy.md  pyproject.toml  run.sh  setup.sh  start_all.sh
anafi/: Dockerfile  run_anafi.sh  run_olympe.sh
anafi/src/: check_drone_connection.py
bebop2/: Dockerfile  run_bebop.sh
src/: controller.py  follow_logic.py  main.py  ui.py  ui2.py  utils.py
src/commanders/: base_commander.py  bebop_commander.py  mavsdk_commander.py  olympe_commander.py
src/pyPS4Controller/: __main__.py  cli.py  controller.py
test/anafi/: run_olympe.sh
test/anafi/src/: keyboard_control.py  takeoff_land.py
test/bebop2/: Dockerfile
test_python/: main.py
