[project]
name = "drone-following"
version = "0.1.0"
description = "a simple follow-me application to coordinate two drones"
authors = [{ name = "Theo Guegan", email = "theo.guegan@etu.utc.fr" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geographiclib>=2.0",
    "mavsdk>=3.0.1",
]
